# symforce

./: CMakeLists.txt  mse.py  plotting_r.py
rpgtxt/: autogen_fjac.txt  autogen_fvec.txt  original_fjac.txt
symforce/examples/: CMakeLists.txt
symforce/examples/custom_toy_example/: toy_example.cc  toy_example.py
symforce/examples/residual/: residual.py  unit_test.cc
symforce/examples/robot_3d_localization/: CMakeCache.txt  Makefile  cmake_install.cmake  common.h
symforce/examples/robot_3d_localization/bundle_adjustment_in_the_large/: Makefile  cmake_install.cmake
symforce/internal/: symbolic.py
test/: symforce_examples_residual_test.cc  symforce_examples_toy_test.cc  symforce_lm_huber_test.cc  symforce_optimizer_test.cc
upenntxt/: autogen_fjac.txt  autogen_fvec.txt  original_fjac.txt
